--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Frontend Mentor | FAQ accordion</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>FAQ accordion</title>
   </head>
   <body>
     <div class="accordion-body">
@@ -39,7 +28,7 @@
           <h1>FAQs</h1>
         </div>
         <div class="container">
-          <div class="label">
+          <div class="label" tabindex="0">
             What is Frontend Mentor, and how will it help me?
             <img src="./assets/images/icon-plus.svg" />
           </div>
@@ -52,7 +41,7 @@
         </div>
         <hr />
         <div class="container">
-          <div class="label">
+          <div class="label" tabindex="0">
             Is Frontend Mentor free?<img src="./assets/images/icon-plus.svg" />
           </div>
           <div class="content hidden">
@@ -63,7 +52,7 @@
         </div>
         <hr />
         <div class="container">
-          <div class="label">
+          <div class="label" tabindex="0">
             Can I use Frontend Mentor projects in my portfolio?
             <img src="./assets/images/icon-plus.svg" />
           </div>
@@ -75,11 +64,11 @@
         </div>
         <hr />
         <div class="container">
-          <div class="label">
+          <div class="label" tabindex="0">
             How can I get help if I'm stuck on a Frontend Mentor challenge?
             <img src="./assets/images/icon-plus.svg" />
           </div>
-          <div class="content">
+          <div class="content hidden">
             The best place to get help is inside Frontend Mentor's Discord
             community. There's a help channel where you can ask questions and
             seek support from other community members.
