--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="./index.js" />
     <title>FAQ accordion</title>
   </head>
   <body>
@@ -78,5 +77,6 @@
         <hr />
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
