--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <div class="accordion-body">
       <div class="accordion">
         <div class="accordion-title">
-          <img src="./assets/images/icon-star.svg" />
+          <img src="./assets/images/icon-star.svg" alt="title"/>
           <h1>FAQs</h1>
         </div>
         <div class="container">
           <div class="label" tabindex="0">
             What is Frontend Mentor, and how will it help me?
-            <img src="./assets/images/icon-plus.svg" />
+            <img src="./assets/images/icon-plus.svg" alt="label-icon"/>
           </div>
-          <div class="content hidden">
+          <div class="content">
             Frontend Mentor offers realistic coding challenges to help
             developers improve their frontend coding skills with projects in
             HTML, CSS, and JavaScript. It's suitable for all levels and ideal
@@ -42,7 +42,7 @@
         <hr />
         <div class="container">
           <div class="label" tabindex="0">
-            Is Frontend Mentor free?<img src="./assets/images/icon-plus.svg" />
+            Is Frontend Mentor free?<img src="./assets/images/icon-plus.svg" alt="label-icon"/>
           </div>
           <div class="content hidden">
             Yes, Frontend Mentor offers both free and premium coding challenges,
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="label" tabindex="0">
             Can I use Frontend Mentor projects in my portfolio?
-            <img src="./assets/images/icon-plus.svg" />
+            <img src="./assets/images/icon-plus.svg" alt="label-icon"/>
           </div>
           <div class="content hidden">
             Yes, you can use projects completed on Frontend Mentor in your
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="label" tabindex="0">
             How can I get help if I'm stuck on a Frontend Mentor challenge?
-            <img src="./assets/images/icon-plus.svg" />
+            <img src="./assets/images/icon-plus.svg" alt="label-icon"/>
           </div>
           <div class="content hidden">
             The best place to get help is inside Frontend Mentor's Discord
